Added flexbox layout

--- a/index.html
+++ b/index.html
@@ -22,19 +22,31 @@
 
         <!-- Add your site or application content here -->
         <section class="flex-container">
-            <header>Header</header>
-            <main>Main</main>
+            <header>
+                <h1>Hi. I'm Collin!</h1>
+            </header>
+            <main>
+                <p>I am a <span>Novice Designer & Developer</span> who is trying to learn all of the ins and outs of the wonderful world of coding to create the best user experience. 
+                    When I'm not studying, or attempting my hand at side projects; I can be found in the gym, playing video games or spending the day with my girlfriend and my two dogs; Tito & Giannis.</p>
+            </main>
             <div id="div-1" class="flex-items">
-                Div 1
+                <p>I was born and raised in Brookfield, Wisconsin; a small city just outside of Milwaukee. I stayed in my home state for college; attending the University of Wisconsin-Madison
+                before making my first big move across country to Dallas Texas, where I've been for the last three years.</p>
             </div>
             <div id="div-2" class="flex-items">
-                Div 2
+                <p> <span>My passion</span> is Wisconsin sports. You can take the boy outta wisconsin, but you can't take the Wisconsin outta the boy! I am a HUGE Milwaukee Bucks and 
+                Green Bay Packers fan and one of my favorite things to do is trash-talking the Dallas fanbases.</p>
             </div>
             <div id="div-3" class="flex-items">
-                Div 3
+                <p><span>A goal of mine: </span>is to see the Milwaukee Bucks play in every NBA stadium. Fun fact, I have been to around 100 Milwaukee Bucks games at 5 different stadiums; 
+                including game 6 of the 2021 NBA Finals witnessing the Bucks win their second championship in franchise history!</p>
             </div>
-            <footer>Footer</footer>
-        </section>
+            <footer>   
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-linkedin"></i>
+                <i class="fab fa-pinterest"></i>
+            </footer>
+        </section>    
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
